feat(config): configure TypeScript and tooling
Setup tsconfig.json with strict mode and path aliases. Create tsconfig.build.json for production builds. Configure ESLint and Prettier. Add Vitest config. Create placeholder index files. Testing: TypeScript compilation PASS, Build PASS, ESLint PASS, Prettier PASS. Closes #13

--- a/package.json
+++ b/package.json
@@ -33,18 +33,22 @@
   ],
   "scripts": {
     "dev": "pnpm --filter @gati/core dev",
-    "build": "pnpm -r build",
+    "build": "tsc -p tsconfig.build.json",
+    "build:watch": "tsc -p tsconfig.build.json --watch",
     "test": "vitest",
+    "test:watch": "vitest watch",
     "test:unit": "vitest run tests/unit",
     "test:integration": "vitest run tests/integration",
     "test:e2e": "vitest run tests/e2e",
     "test:coverage": "vitest run --coverage",
     "typecheck": "tsc --noEmit",
+    "typecheck:watch": "tsc --noEmit --watch",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
-    "clean": "pnpm -r clean && rimraf node_modules dist build",
+    "clean": "rimraf dist build coverage .tsbuildinfo",
+    "clean:all": "pnpm clean && rimraf node_modules .pnpm-store",
     "prepare": "husky install"
   },
   "devDependencies": {
