feat(cli): implement gati dev command (#10)
- Add chokidar and dotenv dependencies
- Create env-loader utility for loading .env files
- Create watcher utility for file hot reload
- Implement full dev command with:
  - Environment variable loading (.env.local, .env.development, .env)
  - File watching with hot reload
  - Auto-restart on file changes
  - Graceful shutdown on Ctrl+C
  - Custom port option
  - Disable watch option
- Add 16 comprehensive tests (9 env-loader, 7 watcher)
- All 250 tests passing

Closes #10

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@types/chokidar": "^2.1.7",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.10.0",
     "@types/prompts": "^2.4.9",
@@ -78,7 +79,9 @@
   "packageManager": "pnpm@8.11.0",
   "dependencies": {
     "chalk": "^5.6.2",
+    "chokidar": "^4.0.3",
     "commander": "^14.0.2",
+    "dotenv": "^17.2.3",
     "fs-extra": "^11.3.2",
     "ora": "^9.0.0",
     "prompts": "^2.4.2"
