--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.7",
     "@types/chokidar": "^2.1.7",
     "@types/ejs": "^3.1.5",
     "@types/fs-extra": "^11.0.4",
