--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@gati/core",
-  "version": "0.2.0",
+  "name": "@gati-framework/core",
+  "version": "0.3.0",
   "description": "Gati core runtime types and base config",
   "license": "MIT",
   "type": "module",
