--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,7 +46,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@gati/core": ["./src/runtime/index.ts"],
+  "@gati-framework/core": ["./src/runtime/index.ts"],
       "@gati/cli": ["./src/cli/index.ts"],
       "@gati/types": ["./src/runtime/types/index.ts"]
     },
