feat(cli): extract standalone @gati-framework/cli package with deploy dry-run
- New CLI package (@gati-framework/cli) version 0.2.0
- Added create, dev, build, deploy commands
- Deployment templates copied via build script (copy-templates.cjs)
- ESM compatibility (__dirname fix using import.meta.url)
- Path aliases updated to point to package sources
- Example app adjusted to invoke CLI from packages/cli
- Changesets applied; core bumped to 0.4.0

docs(release): add RELEASE.md guide
chore: update workspace scripts and vitest aliases

--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "gati dev",
-    "build": "gati build",
+    "dev": "node ../../packages/cli/dist/index.js dev",
+    "build": "node ../../packages/cli/dist/index.js build",
     "start": "node dist/index.js"
   },
   "keywords": [
