--- a/examples/hello-world/.eslintrc.json
+++ b/examples/hello-world/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../.eslintrc.json",
+  "extends": ["../../.eslintrc.js"],
   "parserOptions": {
     "project": "./tsconfig.json",
     "tsconfigRootDir": "."
