--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gati-framework/cli",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "CLI tool for Gati framework - create, develop, build and deploy cloud-native applications",
   "license": "MIT",
   "type": "module",
@@ -16,7 +16,9 @@
   "scripts": {
     "build": "tsc -p tsconfig.build.json && node ./scripts/copy-templates.cjs",
     "clean": "rimraf dist",
-    "dev": "tsc -p tsconfig.build.json --watch"
+    "dev": "tsc -p tsconfig.build.json --watch",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@gati-framework/core": "^0.4.1",
@@ -34,7 +36,8 @@
     "@types/node": "^20.10.0",
     "@types/prompts": "^2.4.9",
     "rimraf": "^5.0.5",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "vitest": "^1.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
