--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gati-framework/runtime",
-  "version": "1.0.0",
+  "version": "1.3.0",
   "description": "Gati runtime execution engine for running handler-based applications",
   "type": "module",
   "main": "./dist/index.js",
@@ -43,10 +43,12 @@
   },
   "homepage": "https://github.com/krishnapaul242/gati#readme",
   "dependencies": {
-    "@gati-framework/core": "workspace:*"
+    "@gati-framework/core": "workspace:*",
+    "pino": "^9.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "pino-pretty": "^13.1.2",
     "typescript": "^5.3.2",
     "vitest": "^1.0.0"
   },
