feat(cli): introduce 'gatic' binary alongside legacy 'gati'
- Added new bin 'gatic' in @gati-framework/cli (v0.4.0 bump)
- Updated docs to use gatic for create/dev/build/deploy/generate
- Adjusted VitePress sidebar CLI labels to gatic
- Added migration notes in getting-started guide
- Retained legacy 'gati' for transitional compatibility

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@gati-framework/cli",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "CLI tool for Gati framework - create, develop, build and deploy cloud-native applications",
   "license": "MIT",
   "type": "module",
   "bin": {
-    "gati": "./dist/index.js"
+    "gati": "./dist/index.js",        
+    "gatic": "./dist/index.js"
   },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
