--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -26,6 +26,7 @@
     "chalk": "^5.6.2",
     "chokidar": "^4.0.3",
     "commander": "^14.0.2",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "fs-extra": "^11.3.2",
     "ora": "^9.0.0",
