--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gati-framework/runtime",
-  "version": "1.3.0",
+  "version": "2.0.0",
   "description": "Gati runtime execution engine for running handler-based applications",
   "type": "module",
   "main": "./dist/index.js",
@@ -43,7 +43,7 @@
   },
   "homepage": "https://github.com/krishnapaul242/gati#readme",
   "dependencies": {
-    "@gati-framework/core": "workspace:*",
+    "@gati-framework/core": "^0.4.1",
     "pino": "^9.5.0"
   },
   "devDependencies": {
