chore: update package versions and add local testing scripts
- Bump version of @gati-framework/cli from 1.0.2 to 1.0.5
- Bump version of @gati-framework/runtime from 2.0.0 to 2.0.2
- Update dependencies in package.json files across the project
- Add local testing scripts for tarball and symlink testing
- Enhance file generation templates to include module type
- Update TypeScript configuration for better compatibility
- Modify import paths to use .js extensions for ES module support
- Improve error handling in logger configuration
- Update e2e tests to reflect new dependency versions

--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "clean": "rimraf dist build coverage .tsbuildinfo",
     "clean:all": "pnpm clean && rimraf node_modules .pnpm-store",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test:local": "powershell -ExecutionPolicy Bypass -File ./scripts/test-quick.ps1 -Mode tarball",
+    "test:local:symlink": "powershell -ExecutionPolicy Bypass -File ./scripts/test-quick.ps1 -Mode symlink"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.7",
