--- a/packages/cli/tsconfig.build.json
+++ b/packages/cli/tsconfig.build.json
@@ -8,7 +8,8 @@
     "declarationMap": true,
     "sourceMap": true,
     "paths": {
-      "@gati-framework/core": ["../core/src"]
+      "@gati-framework/core": ["../core/src"],
+      "@gati-framework/runtime": ["../runtime/src"]
     }
   },
     "include": ["src/**/*", "deployment/**/*"],
