refactor: Update imports and configuration for Gati framework compatibility

--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -18,7 +18,7 @@
   "author": "Krishna Paul",
   "license": "MIT",
   "dependencies": {
-    "gati": "file:../.."
+    "@gati-framework/runtime": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
