--- a/packages/cloud-aws/package.json
+++ b/packages/cloud-aws/package.json
@@ -49,7 +49,7 @@
     "@aws-sdk/client-sts": "^3.670.0",
     "@aws-sdk/client-iam": "^3.670.0",
     "@aws-sdk/client-elastic-load-balancing-v2": "^3.670.0",
-    "@gati-framework/core": "workspace:*"
+    "@gati-framework/core": "^0.4.2"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
