--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gati-framework/cli",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "CLI tool for Gati framework - create, develop, build and deploy cloud-native applications",
   "license": "MIT",
   "type": "module",
@@ -52,8 +52,8 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@gati-framework/core": "^0.4.1",
-    "@gati-framework/runtime": "workspace:*",
+    "@gati-framework/core": "^0.4.3",
+    "@gati-framework/runtime": "^2.0.3",
     "chalk": "^5.6.2",
     "chokidar": "^4.0.3",
     "commander": "^14.0.2",
