--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gati-framework/cli",
-  "version": "1.0.10",
+  "version": "1.0.12",
   "description": "CLI tool for Gati framework - create, develop, build and deploy cloud-native applications",
   "license": "MIT",
   "type": "module",
@@ -63,7 +63,8 @@
     "glob": "^11.0.3",
     "ora": "^9.0.0",
     "prompts": "^2.4.2",
-    "ts-morph": "^27.0.2"
+    "ts-morph": "^27.0.2",
+    "tsx": "^4.20.6"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.5",
