--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "@gati-framework/core": "^0.4.3",
     "@gati-framework/runtime": "^2.0.3",
+    "@gati-framework/types": "workspace:*",
     "chalk": "^5.6.2",
     "chokidar": "^4.0.3",
     "commander": "^14.0.2",
