--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -104,7 +104,8 @@
   "homepage": "https://github.com/krishnapaul242/gati#readme",
   "dependencies": {
     "@gati-framework/core": "^0.4.1",
-    "pino": "^9.5.0"
+    "pino": "^9.5.0",
+    "better-sqlite3": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
