--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "release:version": "changeset version",
     "release:publish": "changeset publish",
     "release": "pnpm -r build && pnpm exec changeset publish",
+    "version-packages": "changeset version",
     "test": "vitest",
     "test:watch": "vitest watch",
     "test:unit": "vitest run tests/unit",
