fix: Make better-sqlite3 optional dependency
- Moved better-sqlite3 to optionalDependencies
- Fixes CI build failures on systems without C++ build tools
- SQLite timeline storage will gracefully fall back to JSON if unavailable
- Updates pnpm-lock.yaml to match package.json

--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -116,7 +116,9 @@
   "homepage": "https://github.com/krishnapaul242/gati#readme",
   "dependencies": {
     "@gati-framework/core": "^0.4.1",
-    "pino": "^9.5.0",
+    "pino": "^9.5.0"
+  },
+  "optionalDependencies": {
     "better-sqlite3": "^9.0.0"
   },
   "devDependencies": {
