--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build packages
-        run: pnpm --filter="!@gati-framework/cli" build
+        run: pnpm --filter @gati-framework/core --filter @gati-framework/types build
 
       - name: Run tests
         run: pnpm test
