--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,7 +53,7 @@ jobs:
         run: pnpm --filter @gati-framework/core --filter @gati-framework/types build
 
       - name: Run tests
-        run: pnpm test
+        run: pnpm test --filter @gati-framework/core --filter @gati-framework/types
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
