docs: update documentation for CI/CD completion and add Timescape placeholders

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,6 +5,9 @@ packages:
   # Core framework packages
   - 'packages/*'
   
+  # Production applications built with Gati
+  - 'apps/*'
+  
   # Example applications
   - 'examples/*'
   
