--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -123,6 +123,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "fast-check": "^4.3.0",
     "pino-pretty": "^13.1.2",
     "typescript": "^5.3.2",
     "vitest": "^1.0.0"
