--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@vitest/coverage-v8": "^1.0.0",
     "ejs": "^3.1.10",
     "eslint": "^8.54.0",
+    "fast-check": "^4.3.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.1.0",
     "prettier": "^3.1.0",
