feat(observability): implement contract-aligned adapters and observability factory
- Add @gati-framework/contracts package with observability interfaces (ILogger, IMetricsProvider, ITracingProvider, ISpan)
- Implement 12 observability adapters (Prometheus, OpenTelemetry, Winston/Loki, CloudWatch, Datadog, Jaeger, New Relic, X-Ray, Zipkin, Sentry)
- Create RuntimeMetricsClient for metrics collection and aggregation
- Implement ObservabilityFactory for provider selection and configuration
- Add comprehensive adapter alignment documentation and feasibility studies
- Update GlobalContext to support observability provider configuration
- Add TypeScript build configurations for contracts package
- Update runtime package dependencies and exports
- Establish contract-based architecture for pluggable observability implementations
- Enable seamless provider swapping without runtime code changes

--- a/packages/observability/package.json
+++ b/packages/observability/package.json
@@ -21,17 +21,31 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "prom-client": "^15.1.3",
+    "@aws-sdk/client-cloudwatch": "^3.705.0",
+    "@aws-sdk/client-cloudwatch-logs": "^3.705.0",
+    "@gati-framework/contracts": "workspace:^",
+    "@gati-framework/core": "workspace:*",
     "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/exporter-prometheus": "^0.54.2",
+    "@opentelemetry/instrumentation-express": "^0.43.0",
+    "@opentelemetry/instrumentation-http": "^0.54.2",
+    "@opentelemetry/resources": "^2.2.0",
+    "@opentelemetry/sdk-metrics": "^1.27.0",
     "@opentelemetry/sdk-node": "^0.54.2",
     "@opentelemetry/sdk-trace-node": "^1.27.0",
-    "@opentelemetry/sdk-metrics": "^1.27.0",
-    "@opentelemetry/exporter-prometheus": "^0.54.2",
-    "@opentelemetry/instrumentation-http": "^0.54.2",
-    "@opentelemetry/instrumentation-express": "^0.43.0",
+    "@opentelemetry/semantic-conventions": "^1.38.0",
+    "@sentry/node": "^8.46.0",
+    "@sentry/tracing": "^7.114.0",
+    "aws-xray-sdk-core": "^3.10.1",
+    "dd-trace": "^5.28.0",
+    "jaeger-client": "^3.19.0",
+    "newrelic": "^12.8.0",
+    "prom-client": "^15.1.3",
     "winston": "^3.17.0",
     "winston-loki": "^6.1.2",
-    "@gati-framework/core": "workspace:*"
+    "zipkin": "^0.22.0",
+    "zipkin-context-cls": "^0.22.0",
+    "zipkin-transport-http": "^0.22.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
