--- a/packages/observability/package.json
+++ b/packages/observability/package.json
@@ -21,8 +21,6 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "@aws-sdk/client-cloudwatch": "^3.705.0",
-    "@aws-sdk/client-cloudwatch-logs": "^3.705.0",
     "@gati-framework/contracts": "workspace:^",
     "@gati-framework/core": "workspace:*",
     "@opentelemetry/api": "^1.9.0",
@@ -34,18 +32,17 @@
     "@opentelemetry/sdk-node": "^0.54.2",
     "@opentelemetry/sdk-trace-node": "^1.27.0",
     "@opentelemetry/semantic-conventions": "^1.38.0",
-    "@sentry/node": "^8.46.0",
-    "@sentry/tracing": "^7.114.0",
-    "aws-xray-sdk-core": "^3.10.1",
-    "dd-trace": "^5.28.0",
-    "jaeger-client": "^3.19.0",
-    "newrelic": "^12.8.0",
     "prom-client": "^15.1.3",
     "winston": "^3.17.0",
-    "winston-loki": "^6.1.2",
-    "zipkin": "^0.22.0",
-    "zipkin-context-cls": "^0.22.0",
-    "zipkin-transport-http": "^0.22.0"
+    "winston-loki": "^6.1.2"
+  },
+  "peerDependencies": {
+    "@gati-framework/observability-adapters": "^1.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@gati-framework/observability-adapters": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
