--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,14 +1,25 @@
 {
   "name": "@gati-framework/contracts",
   "version": "1.1.0",
-  "description": "Type-safe contracts for Gati framework integrations",
+  "description": "Type-safe contracts for Gati framework - Core runtime contracts, JSON schemas, and Protobuf definitions",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "bin": {
+    "gati-contracts-validate": "./dist/cli/validate.js"
+  },
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
+    },
+    "./types": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/types/index.js"
+    },
+    "./utils": {
+      "types": "./dist/utils/validation.d.ts",
+      "import": "./dist/utils/validation.js"
     },
     "./observability": {
       "types": "./dist/observability/index.d.ts",
@@ -21,17 +32,31 @@
   },
   "files": [
     "dist",
-    "README.md"
+    "src/schemas",
+    "src/proto",
+    "test/fixtures",
+    "README.md",
+    "LICENSE"
   ],
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
+    "build": "tsc -p tsconfig.build.json && npm run copy:schemas",
+    "copy:schemas": "node -e \"require('fs').cpSync('src/schemas', 'dist/schemas', {recursive: true})\"",
     "clean": "rimraf dist",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "keywords": [
     "gati",
     "contracts",
     "interfaces",
+    "typescript",
+    "json-schema",
+    "protobuf",
+    "validation",
+    "api-contracts",
+    "runtime",
+    "handlers",
     "observability",
     "metrics",
     "tracing",
@@ -40,8 +65,13 @@
   ],
   "author": "Krishna Paul",
   "license": "MIT",
+  "dependencies": {
+    "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1"
+  },
   "devDependencies": {
     "@types/node": "^20.10.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "vitest": "^1.0.0"
   }
 }
