--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gati-framework/cli",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "description": "CLI tool for Gati framework - create, develop, build and deploy cloud-native applications",
   "license": "MIT",
   "type": "module",
@@ -54,7 +54,7 @@
   "dependencies": {
     "@gati-framework/core": "^0.4.5",
     "@gati-framework/runtime": "^2.0.5",
-    "@gati-framework/types": "workspace:*",
+    "@gati-framework/types": "^1.0.1",
     "chalk": "^5.6.2",
     "chokidar": "^4.0.3",
     "commander": "^14.0.2",
